macros/tests/sig1-fail.rs
//! This file tests the output when the entire signature is wrong

#[macros::entry]
fn e_main() {}

fn main() {}
